seaqt/QtNetwork/gen_qudpsocket.nim


proc fcQUdpSocket_new(): ptr cQUdpSocket {.importc: "QUdpSocket_new".}
proc fcQUdpSocket_new2(parent: pointer): ptr cQUdpSocket {.importc: "QUdpSocket_new2".}
proc fcQUdpSocket_metaObject(self: pointer, ): pointer {.importc: "QUdpSocket_metaObject".}
proc fcQUdpSocket_metacast(self: pointer, param1: cstring): pointer {.importc: "QUdpSocket_metacast".}
proc fcQUdpSocket_tr(s: cstring): struct_miqt_string {.importc: "QUdpSocket_tr".}
proc fcQUdpSocket_trUtf8(s: cstring): struct_miqt_string {.importc: "QUdpSocket_trUtf8".}
proc fcQUdpSocket_joinMulticastGroup(self: pointer, groupAddress: pointer): bool {.importc: "QUdpSocket_joinMulticastGroup".}
proc fcQUdpSocket_joinMulticastGroup2(self: pointer, groupAddress: pointer, iface: pointer): bool {.importc: "QUdpSocket_joinMulticastGroup2".}
proc fcQUdpSocket_leaveMulticastGroup(self: pointer, groupAddress: pointer): bool {.importc: "QUdpSocket_leaveMulticastGroup".}
proc fcQUdpSocket_leaveMulticastGroup2(self: pointer, groupAddress: pointer, iface: pointer): bool {.importc: "QUdpSocket_leaveMulticastGroup2".}
proc fcQUdpSocket_multicastInterface(self: pointer, ): pointer {.importc: "QUdpSocket_multicastInterface".}
proc fcQUdpSocket_setMulticastInterface(self: pointer, iface: pointer): void {.importc: "QUdpSocket_setMulticastInterface".}
proc fcQUdpSocket_hasPendingDatagrams(self: pointer, ): bool {.importc: "QUdpSocket_hasPendingDatagrams".}
proc fcQUdpSocket_pendingDatagramSize(self: pointer, ): clonglong {.importc: "QUdpSocket_pendingDatagramSize".}
proc fcQUdpSocket_receiveDatagram(self: pointer, ): pointer {.importc: "QUdpSocket_receiveDatagram".}
proc fcQUdpSocket_readDatagram(self: pointer, data: cstring, maxlen: clonglong): clonglong {.importc: "QUdpSocket_readDatagram".}
proc fcQUdpSocket_writeDatagram(self: pointer, datagram: pointer): clonglong {.importc: "QUdpSocket_writeDatagram".}
proc fcQUdpSocket_writeDatagram2(self: pointer, data: cstring, len: clonglong, host: pointer, port: cushort): clonglong {.importc: "QUdpSocket_writeDatagram2".}
proc fcQUdpSocket_writeDatagram3(self: pointer, datagram: struct_miqt_string, host: pointer, port: cushort): clonglong {.importc: "QUdpSocket_writeDatagram3".}
proc fcQUdpSocket_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QUdpSocket_tr2".}
proc fcQUdpSocket_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QUdpSocket_tr3".}
proc fcQUdpSocket_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QUdpSocket_trUtf82".}
proc fcQUdpSocket_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QUdpSocket_trUtf83".}
proc fcQUdpSocket_receiveDatagram1(self: pointer, maxSize: clonglong): pointer {.importc: "QUdpSocket_receiveDatagram1".}
proc fcQUdpSocket_readDatagram3(self: pointer, data: cstring, maxlen: clonglong, host: pointer): clonglong {.importc: "QUdpSocket_readDatagram3".}
proc fcQUdpSocket_readDatagram4(self: pointer, data: cstring, maxlen: clonglong, host: pointer, port: ptr cushort): clonglong {.importc: "QUdpSocket_readDatagram4".}
proc fQUdpSocket_virtualbase_resume(self: pointer, ): void{.importc: "QUdpSocket_virtualbase_resume".}
proc fcQUdpSocket_override_virtual_resume(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_resume".}
proc fQUdpSocket_virtualbase_connectToHost(self: pointer, hostName: struct_miqt_string, port: cushort, mode: cint, protocol: cint): void{.importc: "QUdpSocket_virtualbase_connectToHost".}
proc fcQUdpSocket_override_virtual_connectToHost(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_connectToHost".}
proc fQUdpSocket_virtualbase_disconnectFromHost(self: pointer, ): void{.importc: "QUdpSocket_virtualbase_disconnectFromHost".}
proc fcQUdpSocket_override_virtual_disconnectFromHost(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_disconnectFromHost".}
proc fQUdpSocket_virtualbase_bytesAvailable(self: pointer, ): clonglong{.importc: "QUdpSocket_virtualbase_bytesAvailable".}
proc fcQUdpSocket_override_virtual_bytesAvailable(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_bytesAvailable".}
proc fQUdpSocket_virtualbase_bytesToWrite(self: pointer, ): clonglong{.importc: "QUdpSocket_virtualbase_bytesToWrite".}
proc fcQUdpSocket_override_virtual_bytesToWrite(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_bytesToWrite".}
proc fQUdpSocket_virtualbase_canReadLine(self: pointer, ): bool{.importc: "QUdpSocket_virtualbase_canReadLine".}
proc fcQUdpSocket_override_virtual_canReadLine(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_canReadLine".}
proc fQUdpSocket_virtualbase_setReadBufferSize(self: pointer, size: clonglong): void{.importc: "QUdpSocket_virtualbase_setReadBufferSize".}
proc fcQUdpSocket_override_virtual_setReadBufferSize(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_setReadBufferSize".}
proc fQUdpSocket_virtualbase_socketDescriptor(self: pointer, ): uint{.importc: "QUdpSocket_virtualbase_socketDescriptor".}
proc fcQUdpSocket_override_virtual_socketDescriptor(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_socketDescriptor".}
proc fQUdpSocket_virtualbase_setSocketDescriptor(self: pointer, socketDescriptor: uint, state: cint, openMode: cint): bool{.importc: "QUdpSocket_virtualbase_setSocketDescriptor".}
proc fcQUdpSocket_override_virtual_setSocketDescriptor(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_setSocketDescriptor".}
proc fQUdpSocket_virtualbase_setSocketOption(self: pointer, option: cint, value: pointer): void{.importc: "QUdpSocket_virtualbase_setSocketOption".}
proc fcQUdpSocket_override_virtual_setSocketOption(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_setSocketOption".}
proc fQUdpSocket_virtualbase_socketOption(self: pointer, option: cint): pointer{.importc: "QUdpSocket_virtualbase_socketOption".}
proc fcQUdpSocket_override_virtual_socketOption(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_socketOption".}
proc fQUdpSocket_virtualbase_close(self: pointer, ): void{.importc: "QUdpSocket_virtualbase_close".}
proc fcQUdpSocket_override_virtual_close(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_close".}
proc fQUdpSocket_virtualbase_isSequential(self: pointer, ): bool{.importc: "QUdpSocket_virtualbase_isSequential".}
proc fcQUdpSocket_override_virtual_isSequential(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_isSequential".}
proc fQUdpSocket_virtualbase_atEnd(self: pointer, ): bool{.importc: "QUdpSocket_virtualbase_atEnd".}
proc fcQUdpSocket_override_virtual_atEnd(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_atEnd".}
proc fQUdpSocket_virtualbase_waitForConnected(self: pointer, msecs: cint): bool{.importc: "QUdpSocket_virtualbase_waitForConnected".}
proc fcQUdpSocket_override_virtual_waitForConnected(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_waitForConnected".}
proc fQUdpSocket_virtualbase_waitForReadyRead(self: pointer, msecs: cint): bool{.importc: "QUdpSocket_virtualbase_waitForReadyRead".}
proc fcQUdpSocket_override_virtual_waitForReadyRead(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_waitForReadyRead".}
proc fQUdpSocket_virtualbase_waitForBytesWritten(self: pointer, msecs: cint): bool{.importc: "QUdpSocket_virtualbase_waitForBytesWritten".}
proc fcQUdpSocket_override_virtual_waitForBytesWritten(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_waitForBytesWritten".}
proc fQUdpSocket_virtualbase_waitForDisconnected(self: pointer, msecs: cint): bool{.importc: "QUdpSocket_virtualbase_waitForDisconnected".}
proc fcQUdpSocket_override_virtual_waitForDisconnected(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_waitForDisconnected".}
proc fQUdpSocket_virtualbase_readData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QUdpSocket_virtualbase_readData".}
proc fcQUdpSocket_override_virtual_readData(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_readData".}
proc fQUdpSocket_virtualbase_readLineData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QUdpSocket_virtualbase_readLineData".}
proc fcQUdpSocket_override_virtual_readLineData(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_readLineData".}
proc fQUdpSocket_virtualbase_writeData(self: pointer, data: cstring, len: clonglong): clonglong{.importc: "QUdpSocket_virtualbase_writeData".}
proc fcQUdpSocket_override_virtual_writeData(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_writeData".}
proc fQUdpSocket_virtualbase_open(self: pointer, mode: cint): bool{.importc: "QUdpSocket_virtualbase_open".}
proc fcQUdpSocket_override_virtual_open(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_open".}
proc fQUdpSocket_virtualbase_pos(self: pointer, ): clonglong{.importc: "QUdpSocket_virtualbase_pos".}
proc fcQUdpSocket_override_virtual_pos(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_pos".}
proc fQUdpSocket_virtualbase_size(self: pointer, ): clonglong{.importc: "QUdpSocket_virtualbase_size".}
proc fcQUdpSocket_override_virtual_size(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_size".}
proc fQUdpSocket_virtualbase_seek(self: pointer, pos: clonglong): bool{.importc: "QUdpSocket_virtualbase_seek".}
proc fcQUdpSocket_override_virtual_seek(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_seek".}
proc fQUdpSocket_virtualbase_reset(self: pointer, ): bool{.importc: "QUdpSocket_virtualbase_reset".}
proc fcQUdpSocket_override_virtual_reset(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_reset".}
proc fQUdpSocket_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QUdpSocket_virtualbase_event".}
proc fcQUdpSocket_override_virtual_event(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_event".}
proc fQUdpSocket_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QUdpSocket_virtualbase_eventFilter".}
proc fcQUdpSocket_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_eventFilter".}
proc fQUdpSocket_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QUdpSocket_virtualbase_timerEvent".}
proc fcQUdpSocket_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_timerEvent".}
proc fQUdpSocket_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QUdpSocket_virtualbase_childEvent".}
proc fcQUdpSocket_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_childEvent".}
proc fQUdpSocket_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QUdpSocket_virtualbase_customEvent".}
proc fcQUdpSocket_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_customEvent".}
proc fQUdpSocket_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QUdpSocket_virtualbase_connectNotify".}
proc fcQUdpSocket_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_connectNotify".}
proc fQUdpSocket_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QUdpSocket_virtualbase_disconnectNotify".}
proc fcQUdpSocket_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QUdpSocket_override_virtual_disconnectNotify".}
proc fcQUdpSocket_delete(self: pointer) {.importc: "QUdpSocket_delete".}


func init*(T: type gen_qudpsocket_types.QUdpSocket, h: ptr cQUdpSocket): gen_qudpsocket_types.QUdpSocket =
  T(h: h)
proc create*(T: type gen_qudpsocket_types.QUdpSocket, ): gen_qudpsocket_types.QUdpSocket =
  gen_qudpsocket_types.QUdpSocket.init(fcQUdpSocket_new())
